# QueueEvents

./: .gitignore  CMakeLists.txt  QueueEvent  main.cpp  script_build.sh
haders/: A.hpp  IReceiver.hpp
headers/: A.hpp  IQueue.hpp  Queue.hpp  tEvent.hpp
sources/: A.cpp  Queue.cpp
